--- a/docs/content/concepts/object-ownership/immutable.mdx
+++ b/docs/content/concepts/object-ownership/immutable.mdx
@@ -125,6 +125,8 @@ sui client objects $ADDR
 
 Publish the `ColorObject` code on-chain using the Sui Client CLI:
 
+{@include: ../../snippets/info-gas-budget.mdx}
+
 ```shell
 sui client publish $ROOT/examples/move/color_object --gas-budget <GAS-AMOUNT>
 ```
