--- a/docs/content/concepts/sui-move-concepts/packages/custom-policies.mdx
+++ b/docs/content/concepts/sui-move-concepts/packages/custom-policies.mdx
@@ -330,6 +330,8 @@ module policy::day_of_week {
 
 Use the `sui client publish` command to publish the policy.
 
+{@include: ../../../snippets/info-gas-budget.mdx}
+
 ```bash
 sui client publish --gas-budget 100000000
 ```
