--- a/docs/content/guides/developer/advanced/asset-tokenization.mdx
+++ b/docs/content/guides/developer/advanced/asset-tokenization.mdx
@@ -685,6 +685,8 @@ For more details on publishing, please check the setup folder's [README](https:/
 
 Select a package for specific instructions.
 
+{@include: ../../../snippets/info-gas-budget.mdx}
+
 <Tabs>
 
 <TabItem label="asset_tokenization" value="asset_tokenization">
