--- a/docs/content/guides/developer/app-examples/e2e-counter.mdx
+++ b/docs/content/guides/developer/app-examples/e2e-counter.mdx
@@ -107,6 +107,8 @@ sui client switch --env devnet
 
 Now, publish your Move code with the following command:
 
+{@include: ../../../snippets/info-gas-budget.mdx}
+
 ```bash
 sui client publish --gas-budget 10000000 counter
 ```
