--- a/docs/content/guides/developer/sui-101/sign-and-send-txn.mdx
+++ b/docs/content/guides/developer/sui-101/sign-and-send-txn.mdx
@@ -233,6 +233,8 @@ sui keytool import "$MNEMONICS" secp256r1
 
 Create a transfer transaction in CLI. Set the $SUI_ADDRESS to the one corresponding to the keypair used to sign. $GAS_COIN_ID refers to the object ID that is owned by the sender to be used as gas. $GAS_BUDGET refers to the budget used to execute transaction. Then sign with the private key corresponding to the sender address. $MNEMONICS refers to 12/15/18/21/24 words from the wordlist, e.g. "retire skin goose will hurry this field stadium drastic label husband venture cruel toe wire". Refer to [Keys and Addresses](/concepts/cryptography/transaction-auth/keys-addresses.mdx) for more.
 
+{@include: ../../../snippets/info-gas-budget.mdx}
+
 ```shell
 sui client gas
 sui client transfer-sui --to $SUI_ADDRESS --sui-coin-object-id $GAS_COIN_ID --gas-budget $GAS_BUDGET --serialize-unsigned-transaction
