--- a/docs/content/standards/kiosk.mdx
+++ b/docs/content/standards/kiosk.mdx
@@ -111,6 +111,8 @@ tx.moveCall({
 
 ### Create a Sui Kiosk using the Sui CLI
 
+{@include: ../snippets/info-gas-budget.mdx}
+
 ```shell
 sui client call \
     --package 0x2 \
