--- a/docs/content/guides/developer/sui-101/create-coin.mdx
+++ b/docs/content/guides/developer/sui-101/create-coin.mdx
@@ -48,6 +48,8 @@ public fun mint(
 
 If you published the previous example to a Sui network, you can use the `sui client call` command to mint coins and deliver them to the address you provide. See [Sui CLI](../../../references/cli.mdx) for more information on the command line interface.
 
+{@include: ../../../snippets/info-gas-budget.mdx}
+
 ```shell
 sui client call --function mint --module mycoin --package <PACKAGE-ID> --args <TREASURY-CAP-ID> <COIN-AMOUNT> <RECIPIENT-ADDRESS> --gas-budget <GAS-AMOUNT>
 ```
