--- a/docs/content/guides/developer/sui-101/create-coin/regulated.mdx
+++ b/docs/content/guides/developer/sui-101/create-coin/regulated.mdx
@@ -101,6 +101,8 @@ public fun remove_addr_from_deny_list(denylist: &mut DenyList, denycap: &mut Den
 
 To use these functions, you pass the `DenyList` object (`0x403`), your `DenyCap` object ID, and the address you want to either add or remove. Using the Sui CLI, you could use `sui client call` with the required information:
 
+{@include: ../../../../snippets/info-gas-budget.mdx}
+
 ```shell
 sui client call --function add_addr_from_deny_list --module regcoin --package <PACKAGE-ID> --args <DENY-LIST> <DENY-CAP> <ADDRESS-TO-DENY> --gas-budget <GAS-AMOUNT>
 Transaction Digest: <DIGEST-HASH>
