--- a/docs/content/references/cli/validator.mdx
+++ b/docs/content/references/cli/validator.mdx
@@ -144,6 +144,8 @@ A8z83EqjmgwRNFV6sme6A5tTTTQPjiLgiW76neyvhLud
 
 ### Set gas price for the next epoch
 
+{@include: ../../snippets/info-gas-budget.mdx}
+
 ```shell
 $ sui validator request_set_gas_price --args 0x5 \"42\" --gas-budget GAS-BUDGET-AMOUNT>
 ```
