--- a/docs/content/references/contribute/mdx-components.mdx
+++ b/docs/content/references/contribute/mdx-components.mdx
@@ -143,7 +143,16 @@ To include the entire source file, use the `{@inject}` directive with a path to 
 
 #### Include part of code
 
-To include only sections of code, add an ID to identify the section. The ID is used in the directive syntax and in source code comments. The following sections provide examples of different uses and how to format them.
+To include only sections of code, add an ID to identify the section, function, struct, or module. The ID is used in the directive syntax and in source code comments. The following sections provide examples of different uses and how to format them.
+
+#### Include a Move section
+
+You can include specific sections of Move code using the following constructs appended to the end of the code directory:
+- Module: #module=MODULE::NAME
+- Function: #fun=FUNCTION_NAME
+- Struct: #struct=STRUCT_NAME
+
+For example, `{@inject: examples/move/example.source#fun=buy_sword}
 
 #### Include linear parts of code
 
@@ -259,6 +268,14 @@ import lib from "library";
 
 return book;
 ```
+
+#### Options
+
+You can include a space-limited list of options after the @inject call. The following options are supported:
+- `noComments`: Remove comments from Move code
+- `noTests`: Remove tests from captured section of code.
+
+For example, `{@inject: examples/move/example.source#module=example::example noComments noTests}
 
 
 ## Mermaid graphs
